--- a/ansible/docker-playbook.yml
+++ b/ansible/docker-playbook.yml
@@ -39,6 +39,9 @@
         ( ansible_distribution == "Rocky" and
           ansible_distribution_major_version is version('8', '==')
         ) or
+        ( ansible_distribution == "RedHat" and
+          ansible_distribution_major_version is version('9', '==')
+        ) or
         ( ansible_distribution == "Debian" and
           (ansible_distribution_major_version is version('10', '==') or
           ansible_distribution_major_version is version('11', '=='))
