fix: add epel repos

--- a/ansible/roles/common/tasks/os/redhat-9.yml
+++ b/ansible/roles/common/tasks/os/redhat-9.yml
@@ -22,6 +22,8 @@
 - name: Enable RHEL 9 PowerTools Repository
   command: dnf config-manager --set-enabled rhui-codeready-builder-for-rhel-9-x86_64-rhui-rpms
 
+- name : Enable EPEL repository
+  command: dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
 # - name: Install epel-release Repository
 #   yum:
 #     name: epel-release
