fix: singularity compile

--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -63,7 +63,7 @@
 - name: Build Singularity
   ansible.builtin.command:
     cmd: >
-      mconfig --prefix={{ singularity_paths.apps }} > /dev/null
+      sh mconfig --prefix={{ singularity_paths.apps }} > /dev/null
       make -C ./builddir > /dev/null
       make -C ./builddir install > /dev/null
   args:
