--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -61,14 +61,17 @@
     dest: '{{ singularity_paths.build }}'
 
 - name: Build Singularity
-  ansible.builtin.command:
-    cmd: >
-      sh mconfig --prefix='{{ singularity_paths.apps }}' > /dev/null
-      make -C ./builddir > /dev/null
-      make -C ./builddir install > /dev/null
-    creates: '{{ singularity_paths.apps }}'
+  ansible.builtin.shell: |
+    sh mconfig --prefix={{ singularity_paths.apps }} > /dev/null
+    make -C ./builddir > /dev/null
+    make -C ./builddir install > /dev/null
   args:
-    chdir: '{{ singularity_paths.build }}'
-  register: build_output
-  changed_when: build_output.rc != 0
+    chdir: '{{ singularity_paths.build }}/{{ singularity_dir }}'
+  # register: build_output
+  # changed_when: build_output.rc != 0
   # failed_when: "'failed to build' in build_output.stderr"
+
+- name: Set Singularity Environment Variable
+  ansible.builtin.shell: |
+    echo 'export PATH=$PATH:{{ singularity_paths.apps }}/singularity/bin' >> ~/.bashrc
+    source ~/.bashrc
