fix: update singularity binary path env

--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -80,5 +80,5 @@
 
 - name: Set Singularity Environment Variable
   ansible.builtin.shell: |
-    echo 'export PATH=$PATH:{{ singularity_paths.apps }}/singularity/bin' >> ~/.bashrc
+    echo 'export PATH=$PATH:{{ singularity_paths.apps }}/bin' >> ~/.bashrc
     source ~/.bashrc
