--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -62,7 +62,7 @@
 
 - name: Configure Singularity Install Path
   ansible.builtin.shell: |
-    sh mconfig --prefix={{ singularity_paths.apps }} > /dev/null
+    ./mconfig --prefix={{ singularity_paths.apps }} > /dev/null
   args:
     chdir: '{{ singularity_paths.build }}/{{ singularity_dir }}'
 
