--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -62,8 +62,9 @@
 
 - name: Configure Singularity Install Path
   ansible.builtin.shell: |
-    cd '{{ singularity_paths.build }}/{{ singularity_dir }}'
-    ./mconfig --prefix={{ singularity_paths.apps }} > /dev/null
+    ./mconfig --prefix={{ singularity_paths.apps }}
+  args:
+    chdir: '{{ singularity_paths.build }}/{{ singularity_dir }}'
 
 - name: Make Singularity
   ansible.builtin.shell: |
