fix: go env vars

--- a/ansible/roles/go/tasks/main.yaml
+++ b/ansible/roles/go/tasks/main.yaml
@@ -40,5 +40,5 @@
 
 - name: Set Go Environment Variable
   ansible.builtin.shell: |
-    echo 'export PATH=$PATH:{{ go_paths.install }}/go/bin' >> ~/.bashrc
+    echo 'export PATH=$PATH:{{ go_paths.install }}/go/bin' >> /etc/bashrc
     source ~/.bashrc
