--- a/ansible/roles/singularity/tasks/main.yaml
+++ b/ansible/roles/singularity/tasks/main.yaml
@@ -62,9 +62,8 @@
 
 - name: Configure Singularity Install Path
   ansible.builtin.shell: |
-    export PATH=$PATH:{{ go_paths.install }}/go/bin
     go version
-    ./mconfig --prefix={{ singularity_paths.apps }}
+    mconfig --prefix={{ singularity_paths.apps }}
   args:
     chdir: '{{ singularity_paths.build }}/{{ singularity_dir }}'
 
