--- a/ansible/roles/common/vars/redhat-9.yml
+++ b/ansible/roles/common/vars/redhat-9.yml
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+epel_release_gpgkey: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-9
+
 epel_release_package: https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
 
 common_packages:
